Add token retrieval + api search route
